test/compile_errors/stage1/obj/unreachable_code-nested_returns.zig
export fn a() i32 {
    return return 1;
}

// unreachable code - nested returns
//
// tmp.zig:2:5: error: unreachable code
// tmp.zig:2:12: note: control flow is diverted here
